# MP3-Manager

./: TODO  add.php  addsongs  browse.php  cgi.cgi  changeinfo.cgi  index.php  info.php  main.php  mp3manager.inc  mp3manager.sql  preferences.php  search.php  test.cgi  view.php  writecache.cgi  writecache.php
others/bhrpff/: LICENSE  README  bhrpff.pl
others/id3ed-1.9/: Changelog  Makefile  Makefile.in  README  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  id3ed  id3ed.1  id3ed.cc  misc.cc  misc.h
others/id3ren/: file_id.diz  id3ren
others/id3tool-1.1d/: CHANGELOG  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.Win32  acconfig.h  config.cache  config.h  config.h.in  config.h.win32  config.status  configure  configure.in  getopt.c  id3.c  id3.h  id3tool  id3tool.1  id3tool.c  id3tool.mak  update-conf
others/id3tool-1.1d/debian/: README.debian  changelog  control  copyright  rules
others/mp32sql/: MySQL_Table  mp32sql.pl
others/mp3check-0.4.4/: .dep.mp3check  .dep.tappconfig  .dep.terror  .dep.tfiletools  .dep.tstring  Makefile  crc16.h  help  mp3check  mp3check.cc  tappconfig.cc
others/mp3db-0.3.2/: Makefile  README  mp3db
others/mp3html-1.3.6/: BUGS  CHANGES  CREDITS  Makefile  README  TAGS  TODO  header.c  header.h  include.c  llist.c  macro.c  misc.c  mp3html.1  mp3html.c  mp3html.h  subst.c  wrappers.c
others/mp3report-1.0.0/: ChangeLog  README  TODO  default-template.html  documentation.html  documentation.txt  extended-template.html  mp3report.pl
others/mp3sql/: INSTALL  README  index.html  (+7 more)
(+49 files in other folders)
